k3s/stacks/dev/pvr/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab-pvr
