k3s/stacks/dev/pvr/01-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvr-jellyfin-deployment
  namespace: homelab-pvr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pvr-jellyfin-pod
  template:
    metadata:
      labels:
        app: pvr-jellyfin-pod
    spec:
      containers:
        - name: pvr-jellyfin-container
          image: lscr.io/linuxserver/jellyfin:latest
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 8096
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 8096
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8096
            initialDelaySeconds: 10
            periodSeconds: 15
      volumes:
        - name: config
          hostPath:
            type: DirectoryOrCreate
            path: /mnt/data/server/config/jellyfin
        - name: media
          persistentVolumeClaim:
            claimName: pvr-media-library-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pvr-jellyfin-service
  namespace: homelab-pvr
spec:
  selector:
    app: pvr-jellyfin-pod
  ports:
    - port: 8096
      targetPort: 8096
