k3s/stacks/dev/pvr/04-radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvr-radarr-deployment
  namespace: homelab-pvr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pvr-radarr-pod
  template:
    metadata:
      name: pvr-radarr-pod
      namespace: homelab-pvr
      labels:
        app: pvr-radarr-pod
    spec:
      containers:
        - name: pvr-radarr-container
          image: lscr.io/linuxserver/radarr:latest
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /movies
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 7878
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 10
            periodSeconds: 15
      volumes:
        - name: config
          hostPath:
            path: /mnt/data/server/config/radarr
            type: DirectoryOrCreate
        - name: movies
          persistentVolumeClaim:
            claimName: pvr-movies-library-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pvr-radarr-service
  namespace: homelab-pvr
spec:
  selector:
    app: pvr-radarr-pod
  ports:
    - port: 7878
      targetPort: 7878
