k3s/stacks/dev/pvr/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pvr-ingress-rules
  namespace: homelab-pvr
  labels:
    app.kubernetes.io/name: pvr-ingress-rules
spec:
  rules:
  - host: pvr.tail.cryptic-coders.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pvr-jellyfin-service
            port: 
              number: 8096
